<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_message">Edit Message</string>
    <string name="netology">Netology</string>
    <string name="delete_button">deleteButton</string>
    <string name="pencil">pencil</string>
    <string name="chooser_share_post">Share post</string>
    <string name="edit_post">Edit post</string>
    <string name="create_post">Create post</string>
    <string name="new_post">New post</string>
    <string name="video_open_error">Could not open a video</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="no_posts">No posts</string>
    <string name="SmthWentWrong">Something went wrong</string>
    <string name="retry">Retry again</string>
</resources>